// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`structuredData > en: full JSON-LD snapshot 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://harpyhare.ai/#organization",
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://harpyhare.ai/logo.png",
      },
      "name": "harpyhare",
      "url": "https://harpyhare.ai",
    },
    {
      "@id": "https://harpyhare.ai/#website",
      "@type": "WebSite",
      "inLanguage": "en",
      "name": "harpyhare",
      "publisher": {
        "@id": "https://harpyhare.ai/#organization",
      },
      "url": "https://harpyhare.ai",
    },
    {
      "@id": "https://harpyhare.ai/en#webpage",
      "@type": "WebPage",
      "about": {
        "@id": "https://harpyhare.ai/#application",
      },
      "description": "A macOS and Windows app: hold a key and harpyhare captures system audio, transcribes it with Whisper and streams Claude's answer in a floating window. The window stays out of screen shares.",
      "inLanguage": "en",
      "isPartOf": {
        "@id": "https://harpyhare.ai/#website",
      },
      "name": "harpyhare — hears the question, shows the answer",
      "primaryImageOfPage": {
        "@type": "ImageObject",
        "height": 630,
        "url": "https://harpyhare.ai/og-en.jpg",
        "width": 1200,
      },
      "url": "https://harpyhare.ai/en",
    },
    {
      "@id": "https://harpyhare.ai/#application",
      "@type": "SoftwareApplication",
      "applicationCategory": "BusinessApplication",
      "applicationSubCategory": "Productivity utility",
      "description": "A macOS and Windows app: hold a key and harpyhare captures system audio, transcribes it with Whisper and streams Claude's answer in a floating window. The window stays out of screen shares.",
      "downloadUrl": "https://example.test/AudioSystem_0.12.0_aarch64.dmg",
      "featureList": [
        "System audio, not the microphone",
        "Transcription on the fly",
        "Answers from Claude",
        "Invisible to the other side",
        "Teleprompter mode",
        "Your keys, your data",
      ],
      "installUrl": "https://github.com/screenfriskofficial/harpyhare-releases/releases/latest",
      "name": "harpyhare",
      "offers": {
        "@type": "Offer",
        "availability": "https://schema.org/InStock",
        "price": "0",
        "priceCurrency": "USD",
      },
      "operatingSystem": "macOS 14.2+ · Apple Silicon, Windows 10 (2004+) / 11 · x64",
      "publisher": {
        "@id": "https://harpyhare.ai/#organization",
      },
      "screenshot": {
        "@type": "ImageObject",
        "height": 630,
        "url": "https://harpyhare.ai/og-en.jpg",
        "width": 1200,
      },
      "softwareVersion": "0.12.0",
      "url": "https://harpyhare.ai",
    },
    {
      "@id": "https://harpyhare.ai/en#faq",
      "@type": "FAQPage",
      "inLanguage": "en",
      "mainEntity": [
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "It records system audio rather than the microphone — whatever is playing through your headphones or speakers. On macOS that is a Core Audio process tap, on Windows a WASAPI loopback on the output device. You do not need virtual audio devices such as BlackHole or VB-Cable.",
          },
          "name": "How does the app hear the other person if my microphone is off?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "No. The window is marked as protected from capture, so in Zoom, Google Meet or a plain screenshot its place is empty — only you can see it. One caveat: the pixels are hidden, the running process is not, so the app is still listed among processes (as “Audio System”).",
          },
          "name": "Is the window visible when I share my screen?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "The app is free. You need a Groq key (speech recognition) and an Anthropic key (Claude answers) — you pay the providers directly at their rates, with nobody in between. As an alternative there are one-time access codes: requests then go through a proxy and no keys of your own are required.",
          },
          "name": "What does it cost and do I need my own API keys?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Groq's Whisper large-v3-turbo handles English, Russian and dozens of other languages; you can pin the language or leave auto-detection on. A separate toggle turns on translation mode, which converts speech in any language straight into English text.",
          },
          "name": "Which languages does the transcription understand?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "macOS 14.2 or newer on Apple Silicon, or Windows 10 version 2004 and newer on x64. An internet connection is required: transcription and answers go through APIs. On macOS the system will ask for permission to record system audio on first launch.",
          },
          "name": "What are the system requirements?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Audio goes to Groq for transcription and the text goes to Anthropic for the answer. The app runs no servers of its own and needs no account. Chat history, settings and reference material stay on your disk in the app's own folder.",
          },
          "name": "Where do my conversations go?",
        },
      ],
    },
  ],
}
`;

exports[`structuredData > ru: full JSON-LD snapshot 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://harpyhare.ai/#organization",
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://harpyhare.ai/logo.png",
      },
      "name": "harpyhare",
      "url": "https://harpyhare.ai",
    },
    {
      "@id": "https://harpyhare.ai/#website",
      "@type": "WebSite",
      "inLanguage": "ru",
      "name": "harpyhare",
      "publisher": {
        "@id": "https://harpyhare.ai/#organization",
      },
      "url": "https://harpyhare.ai",
    },
    {
      "@id": "https://harpyhare.ai/#webpage",
      "@type": "WebPage",
      "about": {
        "@id": "https://harpyhare.ai/#application",
      },
      "description": "Приложение для macOS и Windows: зажмите клавишу — harpyhare запишет системный звук, распознает речь через Whisper и покажет ответ Claude в плавающем окне поверх остальных. Окно не попадает в захват экрана.",
      "inLanguage": "ru",
      "isPartOf": {
        "@id": "https://harpyhare.ai/#website",
      },
      "name": "harpyhare — слышит вопрос, показывает ответ",
      "primaryImageOfPage": {
        "@type": "ImageObject",
        "height": 630,
        "url": "https://harpyhare.ai/og.jpg",
        "width": 1200,
      },
      "url": "https://harpyhare.ai/",
    },
    {
      "@id": "https://harpyhare.ai/#application",
      "@type": "SoftwareApplication",
      "applicationCategory": "BusinessApplication",
      "applicationSubCategory": "Утилита для продуктивности",
      "description": "Приложение для macOS и Windows: зажмите клавишу — harpyhare запишет системный звук, распознает речь через Whisper и покажет ответ Claude в плавающем окне поверх остальных. Окно не попадает в захват экрана.",
      "downloadUrl": "https://example.test/AudioSystem_0.12.0_aarch64.dmg",
      "featureList": [
        "Системный звук, не микрофон",
        "Расшифровка на лету",
        "Ответы от Claude",
        "Невидим для собеседников",
        "Режим суфлёра",
        "Свои ключи, свои данные",
      ],
      "installUrl": "https://github.com/screenfriskofficial/harpyhare-releases/releases/latest",
      "name": "harpyhare",
      "offers": {
        "@type": "Offer",
        "availability": "https://schema.org/InStock",
        "price": "0",
        "priceCurrency": "USD",
      },
      "operatingSystem": "macOS 14.2+ · Apple Silicon, Windows 10 (2004+) / 11 · x64",
      "publisher": {
        "@id": "https://harpyhare.ai/#organization",
      },
      "screenshot": {
        "@type": "ImageObject",
        "height": 630,
        "url": "https://harpyhare.ai/og.jpg",
        "width": 1200,
      },
      "softwareVersion": "0.12.0",
      "url": "https://harpyhare.ai",
    },
    {
      "@id": "https://harpyhare.ai/#faq",
      "@type": "FAQPage",
      "inLanguage": "ru",
      "mainEntity": [
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Оно записывает не микрофон, а системный звук — то, что играет в наушниках или колонках. На macOS для этого используется process tap Core Audio, на Windows — WASAPI loopback на устройстве вывода. Виртуальные аудиоустройства вроде BlackHole или VB-Cable ставить не нужно.",
          },
          "name": "Как приложение слышит собеседника, если микрофон выключен?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Нет. Окно помечено как защищённое от захвата, поэтому в Zoom, Google Meet и обычном скриншоте на его месте пустота — видите его только вы. Оговорка: скрываются пиксели окна, но не сам факт запущенного процесса — в списке процессов приложение видно (под именем «Audio System»).",
          },
          "name": "Видно ли окно, когда я демонстрирую экран?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Приложение бесплатное. Нужны ключи Groq (распознавание речи) и Anthropic (ответы Claude) — вы платите провайдерам напрямую по их тарифам, посредников нет. Как альтернатива поддерживаются одноразовые коды доступа: тогда запросы идут через прокси и свои ключи не нужны.",
          },
          "name": "Сколько это стоит и нужны ли свои API-ключи?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Модель Whisper large-v3-turbo от Groq распознаёт русский, английский и десятки других языков; язык можно зафиксировать или оставить автоопределение. Отдельным тумблером включается режим перевода — речь на любом языке сразу превращается в английский текст.",
          },
          "name": "Какие языки понимает распознавание?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "macOS 14.2 или новее на Apple Silicon, либо Windows 10 версии 2004 и новее на x64. Нужен интернет: распознавание и ответы идут через API. На macOS при первом запуске система спросит разрешение на запись системного звука.",
          },
          "name": "Какие требования к системе?",
        },
        {
          "@type": "Question",
          "acceptedAnswer": {
            "@type": "Answer",
            "text": "Звук отправляется в Groq на распознавание, текст — в Anthropic за ответом. Своих серверов у приложения нет, аккаунт заводить не нужно. История чатов, настройки и справочные материалы лежат локально на диске в папке приложения.",
          },
          "name": "Куда попадают мои разговоры?",
        },
      ],
    },
  ],
}
`;
